--- a/client-app-ts/package.json
+++ b/client-app-ts/package.json
@@ -3,17 +3,20 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@aspnet/signalr": "^1.1.0",
         "@types/jest": "23.3.13",
         "@types/node": "10.12.18",
         "@types/react": "16.7.20",
         "@types/react-dom": "16.0.11",
         "@types/react-router-bootstrap": "^0.24.5",
         "@types/react-router-dom": "^4.3.1",
+        "monaco-editor": "^0.15.6",
         "react": "^16.7.0",
         "react-dom": "^16.7.0",
         "react-router-bootstrap": "^0.24.4",
         "react-router-dom": "^4.3.1",
         "react-scripts": "2.1.3",
+        "react-treebeard": "^3.1.0",
         "rimraf": "^2.6.2",
         "typescript": "3.2.4"
     },
