--- a/client-app-ts/package.json
+++ b/client-app-ts/package.json
@@ -16,9 +16,9 @@
         "react-router-bootstrap": "^0.24.4",
         "react-router-dom": "^4.3.1",
         "react-scripts": "2.1.3",
-        "react-treebeard": "^3.1.0",
         "rimraf": "^2.6.2",
-        "typescript": "3.2.4"
+        "typescript": "3.2.4",
+        "velocity-react": "^1.4.1"
     },
     "scripts": {
         "start": "rimraf ./build && react-scripts start",
