--- a/client-app-ts/package.json
+++ b/client-app-ts/package.json
@@ -10,12 +10,14 @@
         "@types/react-dom": "16.0.11",
         "@types/react-router-bootstrap": "^0.24.5",
         "@types/react-router-dom": "^4.3.1",
+        "@types/react-toastify": "^4.0.1",
         "monaco-editor": "^0.15.6",
         "react": "^16.7.0",
         "react-dom": "^16.7.0",
         "react-router-bootstrap": "^0.24.4",
         "react-router-dom": "^4.3.1",
         "react-scripts": "2.1.3",
+        "react-toastify": "^4.5.2",
         "rimraf": "^2.6.2",
         "typescript": "3.2.4",
         "velocity-react": "^1.4.1"
